--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.1",
+    "react-router-dom": "^7.4.1",
     "tailwindcss": "^4.0.17"
   },
   "devDependencies": {
